IaC/2.Terraform/K8s/lessons/142/go-app/deploy/1-deployment-service-a.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
        istio: monitor
    spec:
      containers:
      - image: 424432388155.dkr.ecr.us-east-1.amazonaws.com/go-app:latest
        imagePullPolicy: Always
        name: service-a
        ports:
        - name: http
          containerPort: 8080
