IaC/2.Terraform/K8s/lessons/142/go-app/deploy/7-service-b-v1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-b-v1
  namespace: staging
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: service-b
    version: v1
